--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react": "~18.2.79",
     "axios": "^1.7.7",
     "expo": "^51.0.34",
+    "expo-application": "~5.9.1",
     "expo-build-properties": "^0.12.5",
     "expo-device": "~6.0.2",
     "expo-font": "~12.0.10",
@@ -25,18 +26,19 @@
     "metro": "^0.80.12",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.74.5",
+    "react-native": "^0.74.5",
     "react-native-device-info": "^13.0.0",
     "react-native-dialog": "^9.3.0",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-modal": "^13.0.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-svg": "15.2.0",
+    "react-native-svg": "^15.2.0",
     "react-native-svg-transformer": "^1.5.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@react-native/metro-config": "^0.75.3"
   },
   "private": true
 }
