--- a/app.json
+++ b/app.json
@@ -32,6 +32,13 @@
             "./assets/fonts/inter_18pt_medium.ttf"
           ]
         }
+        
+      ],
+      [
+        "expo-location",
+        {
+          "locationAlwaysAndWhenInUsePermission": "Allow $(PRODUCT_NAME) to use your location."
+        }
       ],
       "expo-secure-store"
     ],
