--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@react-navigation/stack": "^6.4.1",
     "@types/react": "~18.2.79",
     "axios": "^1.7.7",
+    "dayjs": "^1.11.13",
     "expo": "^51.0.34",
     "expo-application": "~5.9.1",
     "expo-build-properties": "^0.12.5",
     "expo-device": "~6.0.2",
     "expo-font": "~12.0.10",
+    "expo-location": "~17.0.1",
     "expo-secure-store": "~13.0.2",
     "expo-status-bar": "~1.12.1",
     "metro": "^0.80.12",
